# syncsemphone-next

./: .env.example  .gitignore  README.md
apps/api/: pyproject.toml
apps/api/app/: main.py  security.py
apps/api/scripts/: reachability_discharge_matrix.py  reachability_fact_extract_20260302.py  reachability_fixed_action_audit.py  reachability_imi01_candidate_adoptability_audit_20260303.py  reachability_imi01_core_adoptable_fix_20260303.py  reachability_imi01_lexical_only_research_20260303.py  reachability_imi01_post_goal_continuation_audit_20260303.py  reachability_imi01_s4_casepack_followup_20260303.py  reachability_imi01_s4_last_residual_20260303.py  reachability_japanese2_266_probe_20260302.py  reachability_japanese2_9301_9304_probe_20260302.py  reachability_japanese2_casepack_probe_20260302.py  reachability_japanese2_entry_conditions_facts_20260302.py  reachability_japanese2_lexical_adoption_audit_20260303.py  reachability_japanese2_lexical_fact_extract_20260302.py  reachability_japanese2_lexical_final_decision_20260303.py  reachability_japanese2_lexical_only_followup_20260302.py  reachability_japanese2_lexical_selection_impl_20260302.py  reachability_japanese2_p0_125to204_20260302.py  reachability_japanese2_targeted_probe_20260302.py  reachability_lexicon_probe_20260302.py  reachability_residual_diagnose.py
apps/api/tests/: conftest.py  test_cors.py  test_derivation.py  test_e2e_hypothesis_loop.py  test_health.py  test_legacy_perl.py  test_lexicon.py  test_lexicon_ext.py  test_numeration_api.py  test_observation.py  test_reference.py  test_security.py  (+1 more)
(+394 files in other folders)
