[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syncsemphone-next-api"
version = "0.1.0"
description = "FastAPI app for syncsemphone-next"
requires-python = ">=3.9"
dependencies = [
  "fastapi==0.116.0",
  "uvicorn==0.35.0",
  "pydantic==2.8.0",
  "itsdangerous==2.2.0",
  "psycopg[binary]==3.2.9",
  "PyYAML",
  "SudachiPy",
  "SudachiDict-core",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.0",
  "httpx==0.28.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
